--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "better-sqlite3": "^7.4.0",
     "discord.js": "^12.5.3",
-    "dotenv": "^9.0.2",
-    "sqlite3": "^5.0.2"
+    "dotenv": "^9.0.2"
   }
 }
