--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.916.0",
     "better-sqlite3": "^7.4.0",
     "discord.js": "^12.5.3",
     "dotenv": "^9.0.2"
